33-aws-eks-ecomm-3-istio/1-Traffic/3-Fault-Injection/shoppingportal-vs-fault-abort.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shoppingportal-vs
  namespace: shoppingportal  
spec:
  gateways:
  - shoppingportal-gateway
  hosts:
   - "*"
  http:
  - match:
    - uri:
        prefix: /ui
      headers:
        user-agent:
          regex: ".*Firefox.*"
    fault:
      abort:
        httpStatus: 500
        percentage: 
          value: 100              
    route:
    - destination:
        host: ms-sp-ui-svc.shoppingportal.svc.cluster.local
        subset: canary # match v2 only
        port:
          number: 80  
  - match:
    - uri:
        prefix: /ui
    route:
    - destination:
        host: ms-sp-ui-svc.shoppingportal.svc.cluster.local
        subset: stable # match v2 only
        port:
          number: 80
